Resolves: tdf#149277 we don't want to search the whole tree for dups

just the immediate children of the supplied parent node

Change-Id: I79595fd940257615f0d012cb9a4556aea51d7db9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140986
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>